--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
