--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "ethers": "^5.0.18",
+    "moment": "^2.29.4",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
